[gd_scene load_steps=4 format=3 uid="uid://d1wajiartnc4a"]

[ext_resource type="Script" path="res://Scripts/snake.gd" id="1_uew3u"]
[ext_resource type="AudioStream" uid="uid://v11blfwsxk62" path="res://Assets/Hit Sound.wav" id="2_fqchq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3tsb"]
size = Vector2(4.44444, 12.5)

[node name="Snake" type="Area2D"]
scale = Vector2(0.9, 0.9)
collision_mask = 14
script = ExtResource("1_uew3u")

[node name="Hit Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fqchq")
volume_db = 5.0

[node name="GoFasterTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.14
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
region_rect = Rect2(8, 24, 8, 8)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.55556, 0)
shape = SubResource("RectangleShape2D_m3tsb")
metadata/_edit_group_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GoFasterTimer" to="." method="_on_go_faster_timer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
